--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> miso-sampler </title>
+    <title> Miso Drag and Drop </title>
   </head>
   <body>
     <script src="index.js" type="module"></script>
